openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
  namespace: student-management-project
  labels:
    app: student-management
spec:
  selector:
    app: student-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
