openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: student-management-route
  namespace: student-management-project
  labels:
    app: student-management
spec:
  to:
    kind: Service
    name: student-management-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
